<resources>
    <string name="app_name">Financial Calulator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_finances">Add Finances</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_contacts">Contacts</string>

    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>

    <string name="report_label">Finance Report</string>
    <string name="splash_header_text">Finance Tracker</string>

    <string name="retype_edt">Retype Password</string>
    <string name="password_edt_sg">Enter Password</string>
    <string name="User_name_edt">Enter User Name</string>
    <string name="email_edt">Email</string>
    <string name="Sign_me_btn">SIGN ME UP!</string>
    <string name="nameerror">Invalid User Name</string>
    <string name="passerror">Invalid Password</string>
    <string name="emailerror">Invalid Email</string>
    <string name="repasserror">Passwords DO NOT MATCH</string>
    <string name="financials_header">Enter Financial Information</string>
    <string name="finance_amount_hint">Enter Amount</string>
    <string name="finance_submit">Submit</string>
</resources>