<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="100dp"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/edt_user_signup_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/Username" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="50dp"
        android:inputType="textPersonName"
        android:hint="@string/Password" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">


        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:text="@string/sign_up" />

        <Button
            android:id="@+id/btn_log"
            android:layout_marginHorizontal="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login" />
    </LinearLayout>

</LinearLayout>