<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <EditText
        android:id="@+id/edt_user_signup_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:hint="@string/User_name_edt"
        android:textAlignment="center"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edt_password_signup_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_password_signup_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:hint="@string/password_edt_sg"
        android:textAlignment="center"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edt_retype_pass_signup_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_user_signup_activity" />

    <EditText
        android:id="@+id/edt_retype_pass_signup_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:hint="@string/retype_edt"
        android:textAlignment="center"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edt_email_signup_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_password_signup_activity" />

    <EditText
        android:id="@+id/edt_email_signup_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:hint="@string/email_edt"
        android:textAlignment="center"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btn_sign_me_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_retype_pass_signup_activity" />


    <Button
        android:id="@+id/btn_sign_me_up"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="#3AAE2D"
        android:text="@string/Sign_me_btn"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>